{
  "version": 4,
  "terraform_version": "1.1.3",
  "serial": 140,
  "lineage": "a46cd5b8-a33d-bf92-75e0-a61c0a01d639",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "kube-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:299566667849:internet-gateway/igw-066ef67b154676cbd",
            "id": "igw-066ef67b154676cbd",
            "owner_id": "299566667849",
            "tags": {
              "Name": "kube-igw"
            },
            "tags_all": {
              "Name": "kube-igw"
            },
            "vpc_id": "vpc-020b3677175c475e6"
          },
          "dependencies": [
            "aws_vpc.kube-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "kube-routetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:299566667849:route-table/rtb-07287a4de3bb6c13b",
            "id": "rtb-07287a4de3bb6c13b",
            "owner_id": "299566667849",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-066ef67b154676cbd",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kube-routetable"
            },
            "tags_all": {
              "Name": "kube-routetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-020b3677175c475e6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.kube-igw",
            "aws_vpc.kube-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "kube-routetable-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00e597f203e4a71b0",
            "route_table_id": "rtb-07287a4de3bb6c13b",
            "subnet_id": "subnet-0976f2f4c613023d7"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "aws_internet_gateway.kube-igw",
            "aws_route_table.kube-routetable",
            "aws_subnet.subnets",
            "aws_vpc.kube-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c95abfdbbb4b3a5a",
            "route_table_id": "rtb-07287a4de3bb6c13b",
            "subnet_id": "subnet-0b992bea7d685172d"
          },
          "dependencies": [
            "aws_vpc.kube-vpc",
            "data.aws_availability_zones.azs",
            "aws_internet_gateway.kube-igw",
            "aws_route_table.kube-routetable",
            "aws_subnet.subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:299566667849:security-group/sg-054967f25f46c9da4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-054967f25f46c9da4",
            "ingress": [],
            "name": "terraform-20220114132036464600000006",
            "name_prefix": "terraform-",
            "owner_id": "299566667849",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kube-securitygroup"
            },
            "tags_all": {
              "Name": "kube-securitygroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-020b3677175c475e6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.kube-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:299566667849:subnet/subnet-0976f2f4c613023d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0976f2f4c613023d7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "299566667849",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kube-subnet-1"
            },
            "tags_all": {
              "Name": "kube-subnet-1"
            },
            "vpc_id": "vpc-020b3677175c475e6"
          },
          "dependencies": [
            "aws_vpc.kube-vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:299566667849:subnet/subnet-0b992bea7d685172d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b992bea7d685172d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "299566667849",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kube-subnet-2"
            },
            "tags_all": {
              "Name": "kube-subnet-2"
            },
            "vpc_id": "vpc-020b3677175c475e6"
          },
          "dependencies": [
            "aws_vpc.kube-vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "kube-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:299566667849:vpc/vpc-020b3677175c475e6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0eed7269f3877d750",
            "default_route_table_id": "rtb-0bc68b07e0bc75522",
            "default_security_group_id": "sg-0a0d758e2bf586a85",
            "dhcp_options_id": "dopt-0f81587db98dd6de3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-020b3677175c475e6",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0bc68b07e0bc75522",
            "owner_id": "299566667849",
            "tags": {
              "Name": "kube-vpc"
            },
            "tags_all": {
              "Name": "kube-vpc"
            }
          }
        }
      ]
    }
  ]
}